# FoodCalculator

./: CMakeLists.txt
ExampleCSV/: food_by_area.csv  food_by_area_farmer.csv  food_by_gather.csv  food_by_hunt.csv  food_by_plants.csv
FoodCalculator/: CMakeLists.txt
FoodCalculator/lib/matplotlib-cpp/include/: matplotlibcpp.h
FoodCalculator/src/: FoodCalculator.cpp  FoodCalculator.h  GenericVector.cpp  GenericVector.h
